--- a/css/main.css
+++ b/css/main.css
@@ -11,25 +11,25 @@ body {
   background: linear-gradient(rgba(255, 255, 250, 0.45), rgba(255, 255, 250, 0.45)), url("../img/pexels-photo-355747.jpeg") 50% 50% no-repeat; }
   .header-banner .header-container {
     height: 100%; }
-    .header-banner .header-container .hero-scene--first-row {
+    .header-banner .header-container .hero-scene-first-row {
       padding: 43px 0 0 0; }
-      .header-banner .header-container .hero-scene--first-row .hero-scene--logo {
+      .header-banner .header-container .hero-scene-first-row .hero-scene--logo {
         color: #60606e;
         font-family: 'Montserrat', sans-serif;
         font-size: 18px;
         font-weight: 700;
         text-decoration: none;
         text-transform: uppercase; }
-      .header-banner .header-container .hero-scene--first-row .hero-scene--logo:hover {
+      .header-banner .header-container .hero-scene-first-row .hero-scene--logo:hover {
         color: #60606e;
         opacity: .9;
         text-decoration: none; }
-      .header-banner .header-container .hero-scene--first-row .menu_icon_cont {
+      .header-banner .header-container .hero-scene-first-row .menu_icon_cont {
         cursor: pointer;
         height: 31px;
         position: relative;
         width: 100%; }
-      .header-banner .header-container .hero-scene--first-row .menu_icon {
+      .header-banner .header-container .hero-scene-first-row .menu_icon {
         display: block;
         -webkit-box-shadow: none;
         box-shadow: none;
@@ -41,7 +41,7 @@ body {
         top: calc(50% - 1px);
         width: 15px;
         left: 0; }
-      .header-banner .header-container .hero-scene--first-row .menu_icon::before {
+      .header-banner .header-container .hero-scene-first-row .menu_icon::before {
         background: #000;
         content: '';
         display: block;
@@ -49,7 +49,7 @@ body {
         position: absolute;
         top: -10px;
         width: 31px; }
-      .header-banner .header-container .hero-scene--first-row .menu_icon::after {
+      .header-banner .header-container .hero-scene-first-row .menu_icon::after {
         background: #000;
         bottom: -10px;
         content: '';
@@ -59,21 +59,21 @@ body {
         width: 20px;
         margin-left: 0;
         border: none; }
-      .header-banner .header-container .hero-scene--first-row .menu_icon_cont:hover > .menu_icon, .header-banner .header-container .hero-scene--first-row .menu_icon_cont:hover > .menu_icon::after {
+      .header-banner .header-container .hero-scene-first-row .menu_icon_cont:hover > .menu_icon, .header-banner .header-container .hero-scene-first-row .menu_icon_cont:hover > .menu_icon::after {
         width: 31px; }
-      .header-banner .header-container .hero-scene--first-row .menu_icon_cont *, .header-banner .header-container .hero-scene--first-row .menu_icon::after {
+      .header-banner .header-container .hero-scene-first-row .menu_icon_cont *, .header-banner .header-container .hero-scene-first-row .menu_icon::after {
         -webkit-transition: all .3s ease-in;
         transition: all .3s ease-in; }
-      .header-banner .header-container .hero-scene--first-row .dropdown-menu-icon {
+      .header-banner .header-container .hero-scene-first-row .dropdown-menu-icon {
         -webkit-transform: translate3d(-125px, 31px, 0px) !important;
         transform: translate3d(-125px, 31px, 0px) !important;
         background-color: transparent;
         font-family: 'Montserrat', sans-serif;
         margin: 0;
         border: none; }
-        .header-banner .header-container .hero-scene--first-row .dropdown-menu-icon a:hover {
+        .header-banner .header-container .hero-scene-first-row .dropdown-menu-icon a:hover {
           background-color: rgba(255, 255, 250, 0.45); }
-      .header-banner .header-container .hero-scene--first-row .dropdown-toggle::after {
+      .header-banner .header-container .hero-scene-first-row .dropdown-toggle::after {
         display: none; }
     .header-banner .header-container .header-banner--content {
       -webkit-box-orient: vertical;
@@ -194,6 +194,21 @@ body {
 .container__content h3::before {
   background-color: #7beec7;
   bottom: 10px;
+  content: '';
+  height: 21px;
+  position: absolute;
+  width: 50px;
+  z-index: -1;
+  left: calc(((100% - 50px)/2) - 7px); }
+.container__content .icon-title {
+  color: #60606e;
+  font-size: 60px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase; }
+.container__content .icon-title::before {
+  background-color: #7beec7;
+  bottom: 18px;
   content: '';
   height: 21px;
   position: absolute;
