--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,11 +13,11 @@ body{
 		left top, left bottom,
 		from(rgba(255, 255, 250, 0.45)),
 		to(rgba(255, 255, 250, 0.45))),
-	url('../img/pexels-photo-355747.jpeg') 50% 50% no-repeat;
+	url('../img/pexels-photo-355747.jpg') 50% 50% no-repeat;
 	background: linear-gradient(
 		rgba(255, 255, 250, 0.45),
 		rgba(255, 255, 250, 0.45)),
-	url('../img/pexels-photo-355747.jpeg') 50% 50% no-repeat;
+	url('../img/pexels-photo-355747.jpg') 50% 50% no-repeat;
 	.header-container {
 		height: 100%;
 		.hero-scene-first-row {
